# learn_rust_server

./: .env  Cargo.toml
migrations/: 001_user_table.sql
src/: db.rs  main.rs
